--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "adonis-middleware": "^1.0.11",
     "adonis-validation-provider": "^3.0.5",
     "adonis-websocket": "^1.0.3",
+    "jimp": "^0.2.28",
+    "limax": "^1.5.0",
     "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "youch": "^2.0.4"
   },
   "standard": {
