--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "adonis-middleware": "^1.0.11",
     "adonis-validation-provider": "^3.0.5",
     "adonis-websocket": "^1.0.3",
+    "adonis-websocket-client": "^1.0.2",
+    "axios": "^0.16.2",
+    "buefy": "^0.4.5",
+    "co": "^4.6.0",
+    "fb": "^2.0.0",
     "jimp": "^0.2.28",
     "limax": "^1.5.0",
     "mysql": "^2.13.0",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
+    "object-fit-images": "^3.2.3",
     "youch": "^2.0.4"
   },
   "standard": {
