--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "co": "^4.6.0",
     "fb": "^2.0.0",
     "jimp": "^0.2.28",
+    "knuth-shuffle": "^1.0.1",
     "limax": "^1.5.0",
     "mysql": "^2.13.0",
     "youch": "^2.0.4"
