--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "limax": "^1.5.0",
     "mysql": "^2.13.0",
     "qs": "^6.5.0",
-    "youch": "^2.0.4"
+    "youch": "^2.0.4",
+    "cross-env": "^5.0.1"
   },
   "standard": {
     "global": [
@@ -53,7 +54,6 @@
   },
   "devDependencies": {
     "bulma": "^0.4.3",
-    "cross-env": "^5.0.1",
     "laravel-mix": "^1.2.2",
     "font-awesome": "^4.7.0",
     "nodemon": "^1.11.0",
