--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
     "adonis-validation-provider": "^3.0.5",
     "adonis-websocket": "^1.0.3",
     "adonis-websocket-client": "^1.0.2",
-    "axios": "^0.16.2",
-    "buefy": "^0.4.5",
-    "co": "^4.6.0",
     "fb": "^2.0.0",
     "jimp": "^0.2.28",
     "knuth-shuffle": "^1.0.1",
@@ -58,6 +55,9 @@
     "font-awesome": "^4.7.0",
     "nodemon": "^1.11.0",
     "standard": "^10.0.1",
-    "vue": "^2.4.1"
+    "vue": "^2.4.1",
+    "axios": "^0.16.2",
+    "buefy": "^0.4.5",
+    "co": "^4.6.0"
   }
 }
