Add CDN_BASE env

--- a/.env.travis
+++ b/.env.travis
@@ -16,6 +16,7 @@ FACEBOOK_APP_ID=$FACEBOOK_APP_ID
 FACEBOOK_APP_SECRET=$FACEBOOK_APP_SECRET
 FACEBOOK_REDIRECT_URI=$FACEBOOK_REDIRECT_URI
 GOOGLE_ANALYTICS_CODE=$GOOGLE_ANALYTICS_CODE
+CDN_BASE=$CDN_BASE
 
 TRAVIS_COMMIT=$TRAVIS_COMMIT
 TRAVIS_BUILD_ID=$TRAVIS_BUILD_ID
